<resources>
    <string name="app_name">Easy Mart</string>
    <string name="title_explore">EXPLORE</string>
    <string name="title_chats">CHATS</string>
    <string name="title_sell">SELL</string>
    <string name="title_MyAds">MY ADS</string>
    <string name="title_myaccount">MY ACCOUNT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
