<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_exlore"
        android:icon="@drawable/ic_explore_black_24dp"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/ic_chat_bubble_outline_black_24dp"
        android:title="@string/title_chats" />

    <item
        android:id="@+id/navigation_sell"
        android:icon="@drawable/sell"
        android:title="@string/title_sell" />

    <item
        android:id="@+id/navigation_myads"
        android:icon="@drawable/my_ads"
        android:title="@string/title_MyAds" />


    <item
        android:id="@+id/navigation_myaccount"
        android:icon="@drawable/my_account"
        android:title="@string/title_myaccount" />

</menu>
