<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_exlore">

    <fragment
        android:id="@+id/navigation_exlore"
        android:name="com.example.olx_application.ui.explore.exploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.example.olx_application.ui.chats.ChatsFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/navigation_sell"
        android:name="com.example.olx_application.ui.sell.sellFragment"
        android:label="@string/title_sell"
        tools:layout="@layout/fragment_sell" />

     <fragment
        android:id="@+id/navigation_myads"
        android:name="com.example.olx_application.ui.myads.myadsfragment"
        android:label="@string/title_MyAds"
         tools:layout="@layout/fragment_myads" >
         <action
             android:id="@+id/navtosell"
             app:destination="@id/navigation_sell"/>
     </fragment>

    <fragment
        android:id="@+id/navigation_myaccount"
        android:name="com.example.olx_application.ui.myaccount.myaccountFragment"
        android:label="@string/title_myaccount"
        tools:layout="@layout/fragment_myaccount" />
</navigation>